Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56606

QListView with dragging enabled doesn't leave free space to begin a selection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.6.0, 5.7.0, 5.8.0 Alpha
    • Widgets: Itemviews
    • None
    • 649490f359bc7308a0e21f0b38cf9b8a01e7b619

    Description

      It's not always possible to select multiple items by mouse when dragging is enabled. Items occupy as much area as they can and when you try to begin a selection, then you actually select an item and start dragging it.

      Attachments

        1. actual.png
          actual.png
          15 kB
        2. expected.png
          expected.png
          18 kB
        3. qtbug56606.zip
          2 kB
        4. test-setItemAlignment.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            avolkov Alexander Volkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes