src/widgets/itemviews/qlistview_p.h
@@ -431,6 +431,8 @@ public:
 
     QRect elasticBand;
     bool showElasticBand;
+
+    bool expandingListItems;
 };
 
 // inline implementations
